src/test/ui/macros/macro-stability.stderr
error[E0658]: macro unstable_macro! is unstable
  --> $DIR/macro-stability.rs:11:5
   |
LL |     unstable_macro!();
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(unstable_macros)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
